apps/pocket-id/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocket-id
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: pocket-id
