apps/pocket-id/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-login-rate-limit@kubernetescrd
spec:
  ingressClassName: traefik-system-traefik
  rules:
    - host: auth.kennyandries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket-id
                port:
                  number: 1411
